--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,46 @@
-
-/* Styles go here */
 body{
     font-family: 'Times New Roman', Times, serif;  
 }
 .head{
     font-weight: bolder;
 }
+
 input[type="text"]{
     width: 400px;
     background-color: #F5F5F5;
-    
-    
-  }
-   input[type="date"]{
+        
+}
+input[type="date"]{
     width: 400px;
-     background-color: #F5F5F5;
-    
-  }
+    background-color: #F5F5F5;
+}
 #myForm{
-  margin-left: 50px;
-  overflow-x:auto;
-  font-weight: bold;
+    margin-left: 50px;
+    overflow-x:auto;
+    font-weight: bold;
 }
 #dataTable{
-  overflow-x:auto;
-  border: 4px solid #F5F5F5; 
-  border-radius: 5px;
-  padding-left: 2px;
-  padding-right: 2px;
-  
+    overflow-x:auto;
+    padding-left: 2px;
+    padding-right: 2px;
+    
 }
-
-
-tr:nth-child(even) {
-background-color: #dddddd;
+    
+.table{
+    
+   border-bottom: 5px solid #F5F5F5; 
+    padding-left: 2px;
+    padding-right: 2px;
+   border-collapse: collapse;
+  border-spacing: 0;
+       
 }
-input[type=date]:required:invalid::-webkit-datetime-edit {
-color: transparent;
-}
-input[type=date]:focus::-webkit-datetime-edit {
-color: black !important;
-}
-#c1{
-    background-color:#F5F5F5;
-    border-top: 10px solid lightgrey;
-    border-left: 10px solid lightgrey;
-    border-right: 10px solid lightgrey;
-}
-
-#c2{
-    border-bottom: 50px solid #F5F5F5;
-    border-left: 10px solid #F5F5F5;
-    border-right: 10px solid #F5F5F5;
-}
-
-#c3{
-border-left: 10px solid #F5F5F5;
-}
-
-#btn1{
-    background-color: black;
-    color: white;
+#display{
+   border-left: 5px solid #F5F5F5; 
+   border-right: 5px solid #F5F5F5;
+   border-top: 5px solid #F5F5F5;
+    border-radius: 7.5px;
+  margin-bottom: 30px;
 }
 
 tr td:first-child {
@@ -71,7 +51,7 @@ tr td:first-child {
 }
 tr td:last-child {
     font-weight: bold;
-    padding-left: 2%;
+    padding-left: 0%;
     margin-right: 0%;
     border: 0ch;
 }
@@ -81,3 +61,40 @@ td:nth-child(even){
     column-gap: 0ch;
 }
 
+tr:nth-child(odd) {
+    background-color: #dddddd;
+}
+input[type=date]:required:invalid::-webkit-datetime-edit {
+    color: transparent;
+}
+input[type=date]:focus::-webkit-datetime-edit {
+    color: black !important;
+}
+
+#container1{
+  background-color:#F5F5F5;
+  border-top: 10px solid lightgrey;
+  border-left: 10px solid lightgrey;
+  border-right: 10px solid lightgrey;
+}
+#container2{
+ border-bottom: 50px solid #F5F5F5;
+ border-left: 10px solid #F5F5F5;
+ border-right: 10px solid #F5F5F5;
+}
+#container3{
+  border-left: 10px solid #F5F5F5;
+}
+
+#btn1{
+    background-color: #383838;
+    color: white;
+}
+
+label, input {
+    display: block;
+}
+
+label {
+    margin-bottom: 20px;
+}
